[tool.poetry]
name = "kibelaemojiuploader"
version = "0.1.0"
description = ""
authors = ["TAMURAYuto <yuto.tamur@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gql = "^3.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
